UIIN-1512 Use two versions of "remote-storage-mappings" interface

--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "optionalOkapiInterfaces": {
       "copycat-imports": "1.0",
       "copycat-profiles": "1.0",
-      "remote-storage-mappings": "2.0"
+      "remote-storage-mappings": "1.0 2.0"
     },
     "permissionSets": [
       {
