Bound-with UI - proof-of-concept - do not merge

--- a/package.json
+++ b/package.json
@@ -40,6 +40,11 @@
         "name": "instance",
         "alt": "",
         "title": "Instance"
+      },
+      {
+        "name": "bound-with",
+        "alt": "",
+        "title": "bound-with"
       }
     ],
     "okapiInterfaces": {
