--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@folio/inventory",
-  "version": "7.0.5",
+  "version": "7.0.6",
   "description": "Inventory manager",
   "repository": "folio-org/ui-inventory",
   "publishConfig": {
@@ -742,10 +742,10 @@
     "@bigtest/mocha": "^0.5.1",
     "@bigtest/react": "^0.1.2",
     "@folio/eslint-config-stripes": "^5.3.0",
-    "@folio/stripes": "^6.0.0",
+    "@folio/stripes": "~6.1.4",
     "@folio/stripes-cli": "~2.1.1",
-    "@folio/stripes-components": "^9.0.0",
-    "@folio/stripes-core": "^7.0.0",
+    "@folio/stripes-components": "~9.1.0",
+    "@folio/stripes-core": "~7.1.1",
     "@folio/stripes-smart-components": "^6.0.0",
     "@testing-library/jest-dom": "^5.11.1",
     "@testing-library/react": "^11.0.2",
