--- a/package.json
+++ b/package.json
@@ -78,13 +78,13 @@
       "configuration": "2.0",
       "tags": "1.0",
       "inventory-record-bulk": "1.0",
-      "data-export": "4.0",
-      "orders.holding-summary": "1.0"
+      "data-export": "4.0"
     },
     "optionalOkapiInterfaces": {
       "copycat-imports": "1.0",
       "copycat-profiles": "1.0",
-      "remote-storage-mappings": "1.0 2.0"
+      "remote-storage-mappings": "1.0 2.0",
+      "orders.holding-summary": "1.0"
     },
     "permissionSets": [
       {
