--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
     "optionalOkapiInterfaces": {
       "copycat-imports": "1.0",
       "copycat-profiles": "1.0",
-      "remote-storage-mappings": "1.0 2.0"
+      "remote-storage-mappings": "1.0 2.0",
+      "orders.holding-summary": "1.0"
     },
     "permissionSets": [
       {
@@ -485,7 +486,8 @@
           "inventory-storage.service-points.collection.get",
           "inventory-storage.hrid-settings.item.get",
           "inventory-storage.record-bulk.ids.get",
-          "data-export.quick.export.post"
+          "data-export.quick.export.post",
+          "orders.holding-summary.collection.get"
         ],
         "visible": true
       },
