UIIN-1564: Increment stripes to v7, react to v17.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@folio/inventory",
-  "version": "7.1.2",
+  "version": "8.0.0",
   "description": "Inventory manager",
   "repository": "folio-org/ui-inventory",
   "publishConfig": {
@@ -764,14 +764,14 @@
     "@bigtest/mocha": "^0.5.1",
     "@bigtest/react": "^0.1.2",
     "@folio/eslint-config-stripes": "^5.3.0",
-    "@folio/stripes": "^6.2.0",
+    "@folio/stripes": "^7.0.0",
     "@folio/stripes-cli": "^2.0.0",
-    "@folio/stripes-components": "^9.0.0",
-    "@folio/stripes-connect": "^6.2.0",
-    "@folio/stripes-core": "^7.2.0",
-    "@folio/stripes-util": "^3.0.0",
-    "@folio/stripes-smart-components": "^6.1.0",
+    "@folio/stripes-components": "^10.0.0",
+    "@folio/stripes-connect": "^7.0.0",
+    "@folio/stripes-core": "^8.0.0",
+    "@folio/stripes-smart-components": "^7.0.0",
     "@folio/stripes-testing": "^3.0.0",
+    "@folio/stripes-util": "^5.0.0",
     "@testing-library/jest-dom": "^5.11.1",
     "@testing-library/react": "^11.0.2",
     "@testing-library/user-event": "^12.1.10",
@@ -821,8 +821,8 @@
     "redux-form": "^8.3.7"
   },
   "peerDependencies": {
-    "@folio/stripes": "^6.0.0",
-    "react": "*",
+    "@folio/stripes": "^7.0.0",
+    "react": "^17.0.2",
     "react-intl": "^5.8.0",
     "react-query": "^3.6.0",
     "react-router": "^5.0.1",
