UIIN-1655 added HoldingsForm tests

--- a/package.json
+++ b/package.json
@@ -591,7 +591,8 @@
         "displayName": "Inventory: View, create, edit holdings",
         "subPermissions": [
           "ui-inventory.holdings.create",
-          "inventory-storage.holdings.item.put"
+          "inventory-storage.holdings.item.put",
+          "inventory.config.holdings.blocked-fields.get"
         ],
         "visible": true
       },
