--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
           "search.index.mappings.item.post",
           "search.index.records.collection.post",
           "search.instances.collection.get",
+          "search.instances.ids.collection.get",
           "search.config.languages.item.post",
           "search.config.languages.collection.get",
           "search.config.languages.item.delete",
@@ -832,7 +833,7 @@
   "optionalDependencies": {
     "@folio/plugin-create-inventory-records": "^3.0.0",
     "@folio/plugin-find-instance": "^6.0.0",
-    "@folio/quick-marc": "^4.0.0"
+    "@folio/quick-marc": "^5.0.0"
   },
   "resolutions": {
     "babel-eslint/@babel/parser": "7.7.5",
