--- a/package.json
+++ b/package.json
@@ -777,6 +777,7 @@
     "@folio/stripes-smart-components": "^7.0.0",
     "@folio/stripes-testing": "^3.0.0",
     "@folio/stripes-util": "^5.0.0",
+    "@formatjs/cli": "^4.2.20",
     "@testing-library/jest-dom": "^5.11.1",
     "@testing-library/react": "^11.0.2",
     "@testing-library/user-event": "^12.1.10",
