--- a/package.json
+++ b/package.json
@@ -770,9 +770,10 @@
     "@folio/eslint-config-stripes": "^5.3.0",
     "@folio/stripes": "^7.0.0",
     "@folio/stripes-cli": "^2.0.0",
-    "@folio/stripes-components": "^9.0.0",
-    "@folio/stripes-core": "^7.2.0",
-    "@folio/stripes-smart-components": "^6.1.0",
+    "@folio/stripes-components": "^10.0.0",
+    "@folio/stripes-connect": "^7.0.0",
+    "@folio/stripes-core": "^8.0.0",
+    "@folio/stripes-smart-components": "^7.0.0",
     "@folio/stripes-testing": "^3.0.0",
     "@folio/stripes-util": "^5.0.0",
     "@formatjs/cli": "^4.2.20",
