UIIN-1822: Revert elastic search (#1499)
* Revert "UIIN-1651: Re-enable date filters (#1494)"

This reverts commit fba1bc55a2771ede2469483e2f64dd16f5f1fe04.

* Revert "UIIN-1815: Use instanceFormatIds instead of instanceFormatIds when executing facet query for formats (#1492)"

This reverts commit 7e5e2ee1f498a8698e25420b81cfb1562c3e50d1.

* Revert "UIIN-1809: Fix tag filter (#1485)"

This reverts commit f351aafdf435e3d319c694584f81546a15c750c0.

* Revert "UIIN-1567 Incorporate ui-inventory-search facets (#1450)"

This reverts commit 455ae466f29155f17c856308157652b0f3ac5309.

* Adjust publishers

Adjust itemStatus index

Adjust filters

Adjust filter config

Update stripes deps

* Adjust InstancesList.test.js

* Update changelog

--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "okapiInterfaces": {
       "inventory": "10.10 11.0",
       "source-storage-records": "3.0",
-      "search": "0.5",
       "instance-storage": "7.0 8.0",
       "holdings-storage": "3.0 4.4 5.0",
       "item-storage": "8.0 9.0",
@@ -801,14 +800,12 @@
     "react-query": "^3.6.0",
     "react-router-dom": "^5.0.1",
     "regenerator-runtime": "^0.13.3",
-    "sinon": "^7.0.0",
-    "storybook-readme": "^5.0.8"
+    "sinon": "^7.0.0"
   },
   "dependencies": {
     "@folio/react-intl-safe-html": "^3.0.0",
     "@testing-library/dom": "^7.29.4",
     "@testing-library/react-hooks": "^5.1.0",
-    "classnames": "^2.3.1",
     "file-saver": "^2.0.0",
     "final-form": "^4.18.2",
     "final-form-arrays": "^3.0.1",
