Revert "Merge pull request #1491 from folio-org/UIIN-1660"
This reverts commit 8335e28a9d934077242db1cda61f573c04fb4207, reversing
changes made to fba1bc55a2771ede2469483e2f64dd16f5f1fe04.

--- a/package.json
+++ b/package.json
@@ -593,8 +593,7 @@
         "subPermissions": [
           "ui-inventory.holdings.create",
           "inventory-storage.holdings.item.put",
-          "inventory.config.holdings.blocked-fields.get",
-          "inventory.holdings.item.put"
+          "inventory.config.holdings.blocked-fields.get"
         ],
         "visible": true
       },
