--- a/package.json
+++ b/package.json
@@ -84,7 +84,10 @@
       "configuration": "2.0",
       "tags": "1.0",
       "inventory-record-bulk": "1.0",
-      "data-export": "5.0"
+      "data-export": "5.0",
+      "order-lines": "2.0 3.0",
+      "orders": "11.0 12.0",
+      "acquisitions-units": "1.1"
     },
     "optionalOkapiInterfaces": {
       "copycat-imports": "1.0",
@@ -507,7 +510,10 @@
           "inventory-storage.record-bulk.ids.get",
           "data-export.quick.export.post",
           "orders.holding-summary.collection.get",
-          "orders.pieces.collection.get"
+          "orders.pieces.collection.get",
+          "orders.po-lines.collection.get",
+          "orders.collection.get",
+          "acquisitions-units.units.collection.get"
         ],
         "visible": true
       },
